--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <!-- endinject -->
     <!-- endbuild -->
     <script src="//use.edgefonts.net/tangerine.js"></script>
+    <base href="/">
   </head>
   <body>
     <!--[if lt IE 10]>
